implementacao deploy teste

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,3 +3,11 @@
     "routes": [{"src": "/(.*)", "dest": "app.py" }]
 }
 
+{
+    "build": {
+      "env": {
+        "PG_CONFIG": "/usr/bin/pg_config"
+      }
+    }
+  }
+  
