--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,12 @@
 {
     "builds": [{"src": "app.py", "use": "@vercel/python" }],
-    "routes": [{"src": "/(.*)", "dest": "app.py" }]
+    "routes": [{"src": "/(.*)", "dest": "app.py" }],
+
+    "build": {
+        "env": {
+          "PG_CONFIG": "/usr/bin/pg_config"
+        }
+      }
 }
 
-{
-    "build": {
-      "env": {
-        "PG_CONFIG": "/usr/bin/pg_config"
-      }
-    }
-  }
   
