--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,5 @@
 {
-    "builds": [{"src": "app.py", "use": "@vercel/python"  }],
+    "builds": [{"src": "backend/app.py", "use": "@vercel/python"  }],
     "routes": [{"src": "/(.*)", "dest": "backend/app.py" }]
 }
 
